v0.10.0/_sources/team.md.txt
# Team Gallery

We are an international team dedicated to building a Pythonic API for the
Generic Mapping Tools (GMT). Our goal is to improve GMT's accessibility for
new and experienced users by creating user-friendly interfaces with the GMT
C API, supporting rich display in Jupyter notebooks, and integrating with
the PyData ecosystem.

All are welcome to become involved with the PyGMT project! For more information
about how to get involved, see the {doc}`contributing`.

## Distinguished Contributors

PyGMT Distinguished Contributors are recognized for their substantial
contributions to PyGMT, which may include code, documentation, pull request
review, triaging, forum responses, community building and engagement,
outreach, and inclusion and diversity. New Distinguished Contributors are
selected twice per year by those listed below.

Distinguished Contributors is not meant as a means of conveying
responsibilities. Distinguished Contributors who are also active maintainers of
the PyGMT project and have responsibilities detailed in the
{doc}`maintenance` have 'Maintainer' listed below their names.

:::::{grid} 2 3 3 4

::::{grid-item-card} Dongdong Tian
:margin: 0 3 0 0
:text-align: center
:img-top: https://avatars.githubusercontent.com/u/3974108?v=4

[@seisman](https://github.com/seisman)
+++
{bdg-primary}`Maintainer`
::::

::::{grid-item-card} Jiayuan Yao
:margin: 0 3 0 0
:text-align: center
:img-top: https://avatars.githubusercontent.com/u/50591376?v=4

[@core-man](https://github.com/core-man)
::::

::::{grid-item-card} Leonardo Uieda
:margin: 0 3 0 0
:text-align: center
:img-top: https://avatars.githubusercontent.com/u/290082?v=4

[@leouieda](https://github.com/leouieda)
+++
{bdg-success}`Founder`
::::

::::{grid-item-card} Liam Toney
:margin: 0 3 0 0
:text-align: center
:img-top: https://avatars.githubusercontent.com/u/38269494?v=4

[@liamtoney](https://github.com/liamtoney)
::::

::::{grid-item-card} Max Jones
:margin: 0 3 0 0
:text-align: center
:img-top: https://avatars.githubusercontent.com/u/14077947?v=4

[@maxrjones](https://github.com/maxrjones)
+++
{bdg-primary}`Maintainer`
::::

::::{grid-item-card} Michael Grund
:margin: 0 3 0 0
:text-align: center
:img-top: https://avatars.githubusercontent.com/u/23025878?v=4

[@michaelgrund](https://github.com/michaelgrund)
+++
{bdg-primary}`Maintainer`
::::

::::{grid-item-card} Paul Wessel
:margin: 0 3 0 0
:text-align: center
:img-top: https://avatars.githubusercontent.com/u/26473567?v=4

[@PaulWessel](https://github.com/PaulWessel)
+++
{bdg-success}`Founder`
::::

::::{grid-item-card} Wei Ji Leong
:margin: 0 3 0 0
:text-align: center
:img-top: https://avatars.githubusercontent.com/u/23487320?v=4

[@weiji14](https://github.com/weiji14)
+++
{bdg-primary}`Maintainer`
::::

::::{grid-item-card} Will Schlitzer
:margin: 0 3 0 0
:text-align: center
:img-top: https://avatars.githubusercontent.com/u/29518865?v=4

[@willschlitzer](https://github.com/willschlitzer)
+++
{bdg-primary}`Maintainer`
::::

::::{grid-item-card} Yvonne Fröhlich
:margin: 0 3 0 0
:text-align: center
:img-top: https://avatars.githubusercontent.com/u/94163266?v=4

[@yvonnefroehlich](https://github.com/yvonnefroehlich)
::::
:::::
